# arycal

./: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: docker-image.yml  python-wheels.yml  rust-release.yml  rust.yml
crates/arycal/: Cargo.toml
crates/arycal-cli/: Cargo.toml
crates/arycal-cli/src/: input.rs  lib.rs  main.rs  output.rs
crates/arycal-cloudpath/: Cargo.toml
crates/arycal-cloudpath/src/: compression.rs  lib.rs  msnumpress.rs  openms_xic_parquet.rs  osw.rs  oswpq.rs  xic_parquet.rs
crates/arycal-common/: Cargo.toml
crates/arycal-common/src/: chromatogram.rs  config.rs  error.rs  lib.rs  savgol.rs
crates/arycal-gui/: Cargo.toml
crates/arycal-gui/src/: lib.rs  main.rs  openswath_params.rs
crates/arycal-gui/src/panels/: openswath_settings.rs
crates/arycal/src/: lib.rs  scoring.rs
crates/arycal/src/alignment/: alignment.rs  fast_fourier_lag.rs  fast_fourier_lag_dtw.rs
crates/arycal_pyo3/: MANIFEST.in  README.md  pyproject.toml
crates/arycal_pyo3/examples/: python_usage.py
crates/arycal_pyo3/python/: README.md
docs/: architecture_diagrams.md  openswath_parameter_automation.md
python/: README.md
python/arycal/: __init__.py
