[workspace]
members = [
    "crates/arycal-common",
    "crates/arycal/",
    "crates/arycal-cli/",
    "crates/arycal-cloudpath/", 
]

resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

# Patch anymap to work with Rust 1.86.0+
[patch.crates-io]
anymap = { git = "https://github.com/chris-morgan/anymap.git", branch = "master" }
