[package]
name = "arycal-cli"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "arycal"
path = "src/main.rs"

[dependencies]
arycal-common = { path = "../arycal-common/"}
arycal-cloudpath = { path = "../arycal-cloudpath/" }
arycal-core = { path = "../arycal/" }

clap = { version="4.0", features = ["cargo", "unicode"] }
env_logger = "0.11.6"
log = "0.4.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
arrow = "54.2.1"
parquet = "54.2.1"
# fastrace = { version = "0.7", features = ["enable"] }
deepsize = "0.2.0"
[target.'cfg(unix)'.dependencies]
rlimit = "0.10.2"

# Only include sysinfo on non-WASM builds:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sysinfo = "0.34.2"

# Optional MPI support
mpi = { version = "0.8.0", optional = true }
bincode = { version = "1.3", optional = true }

[features]
default = []
mpi = ["dep:mpi", "dep:bincode"]  # Enable MPI support